yoshimi 1.7.1 M

2020-5-9 Will
* BugFix: Disabled oscillator window saving caused segfaults.

2020-5-4 Will
* BugFix: CLI not responding to engine on/off.
  Caused by aftertouch controls shifing part enable.
  Temporarily fixed by swapping the list order.
  Need to sort out properly so CLI uses correct controls.

2020-5-2 Will
* Added waveform to remembered window positions.

2020-5-1 Will
* BugFix: new highlight not recognised for higher numbers.
  Loss of precision.
* Removed highlight from MIDI - possible race.
* Added switch in config to enable/disable highlighting.
  Default is 'off'.

2020-4-30 Will
* Latest instrument now recognised by CLI.
* Saving to bank also recognised as latest.
* More refinements to BankUI.

2020-4-29 Will
* Initialisation and memory leak fixes found by Stefaan.
* Reverted hidden buttons in instance > 0 bank windows.
  It was causing confusion especially for LV2 users.
* Added bold highlight for last instrument load from bank.

2020-4-26 Will
* Further work on incompatible file recognition.

2020-4-23 Will
* Confirmed Modulator improvements from Kristian.
* Started recognition of default and changed zyn files.

2020-4-20 Will
* Added Resonance to managed windows.
  Forgotten earlier :(
* Final doc updates.
* Set release version 1.7.1

2020-4-19 Will
* Includes GUI SysEf Send GUI bugfix from Jesper.
* Reinstated aftertouch modulation.
* Fixed foldback at zero for channel.
  Might not be correct at zero for key.
* Added tooltips to aftertouch controls.
* Set version as 1.7.1 rc5

2020-4-18 Will
* BugFix: Segfault due to change in commit
  817fbc6ea91a064839eebae1f54efc20753cb927
  Only seen by 1 person so far.
* Trapped rogue dir in file list for directory copy.
* Confirming Bugfixes.
* Further doc updates.
* Set version as 1.7.1 rc4

2020-4-17 Will
* Changed PART_POLY to PART_NORMAL.
  It could be confused with PART_POLIPHONY.
* Changed POLIPHONY - 20 to PART_POLIPHONY.
* Moved default poliphony for parts from Part.cpp to globals.h